yaml/postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
kind: Endpoints
apiVersion: v1
metadata:
  name: postgres
subsets:
  - addresses:
      - ip: 18.233.231.133
    ports:
      - port: 5432
