yaml/tracker.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
  namespace: default
spec:
  selector:
    app: tracker
  ports:
    - port: 80
      targetPort: 8126
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: tracker
  template:
    metadata:
      labels:
        app: tracker
    spec:
      restartPolicy: Always
      priorityClassName: high
      containers:
      - name: tracker
        image: tracker:v1
        ports:
          - containerPort: 8126
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /status
            port: 8126
          initialDelaySeconds: 120
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /status
            port: 8126
          initialDelaySeconds: 180
          periodSeconds: 3
